--- a/README.rdoc
+++ b/README.rdoc
@@ -13,7 +13,9 @@
 
 == SETUP:
 
-* Place app_passenger::default recipe into your runlist to setup the application server.
+* Place app_passenger::default recipe into your runlist to setup the application 
+  server. Since this sets up the app provider, it must be run before the 
+  app::default recipe (which expects a provider to already be set)
 * When using a RightScale ServerTemplate, this will also automatically add the
   common attributes to your ServerTemplate inputs.
 
