--- a/README.rdoc
+++ b/README.rdoc
@@ -31,3 +31,9 @@
 == KNOWN LIMITATIONS
 
 * none
+
+= LICENSE
+
+Copyright RightScale, Inc. All rights reserved.  All access and use subject to the
+RightScale Terms of Service available at http://www.rightscale.com/terms.php and,
+if applicable, other agreements such as a RightScale Master Subscription Agreement.
